<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="20dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            style="?android:actionBarStyle" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tvOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                android:hint="@string/origen"
                android:textSize="@dimen/edittext_text_size_base"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/tvDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="@string/destino"
                android:textSize="@dimen/edittext_text_size_base"
                android:maxLines="1"
                tools:ignore="Autofill" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgConversiones1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbTemperature"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollbars="horizontal"
                android:text="@string/optTempature" />

            <RadioButton
                android:id="@+id/rbLongitude"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/optLongitude" />

            <RadioButton
                android:id="@+id/rbVolume"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/optVolume" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgConversiones2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbAcceleration"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/optAcceleration" />

            <RadioButton
                android:id="@+id/rbWeight"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/optWeight" />

            <RadioButton
                android:id="@+id/rbArea"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/optArea" />

        </RadioGroup>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="10dp">

            <Spinner
                android:id="@+id/spOperation"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConvert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="24dp"
                    android:text="@string/actionConvert"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="24dp"
                    android:text="@string/actionClean"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
